fixed up some text sizing on mobile

--- a/statics/css/main.css
+++ b/statics/css/main.css
@@ -14,7 +14,7 @@ body {
 }
 
 .bannertitle {
-    font-size: 72px;
+    font-size: 53px;
     font-weight: bold;
     text-shadow: 0px 0px 25px #f5f5f5;
 }
@@ -26,6 +26,10 @@ body {
 }
 
 @media (min-width: 992px) {
+    .bannertitle {
+        font-size: 72px;
+    }
+
     .bannertext {
         font-size: 22pt;
     }
